--- a/blog.html
+++ b/blog.html
@@ -3,123 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha256-4w9DunooKSr3MFXHXWyFER38WmPdm361bQS/2KUWZbU=" crossorigin="anonymous">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
+    <link rel="stylesheet" href="./assets/CSS/Style.css">
 
 </head>
 <body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
 <!-- The navigation bar -->
-    <table cellpacing="150px">
-        <tr>
-            <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for=""><a href="index.html">ABENEZER FEKADU</a></label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </td>
-            <td>
-                &nbsp;&nbsp;&nbsp;&nbsp;<Label><a href="blog.html">BLOG</a></Label>&nbsp; &nbsp;
-                <label for=""><a href="task.html">TASKS</a></label>&nbsp; &nbsp;
-                <label for=""></label><a href="gallery.html">GALLERY</a>&nbsp; &nbsp;
-                <label for=""></label><a href="contact.html">ABOUT / CONTACTS</a>&nbsp; &nbsp;
-                <a href="https://www.google.com/"><img src="./assets/images/Search_21px.png" alt="search icon"></a>&nbsp; &nbsp;
-                <a href=""><img src="./assets/images/Moon Symbol_21px.png" alt="moon icon"></a>&nbsp; &nbsp;
-                <br><br>
-                <hr color="red">
-            </td>
-        </tr>
-    </table>
-
+<nav class="navbar navbar-expand-lg sticky-top" id="nav">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto" id="nav-list">
+                <li class="line nav-item active">
+                    <a class="nav-link active" href="blog.html">BLOG</a>
+                </li>
+                <li class=" line nav-item">
+                    <a class="nav-link" href="task.html">TASKS</a>
+                </li>
+                <li class=" line nav-item ">
+                    <a class="nav-link" href="gallery.html">GALLERY</a>
+                </li>
+                <li class="line nav-item">
+                    <a class="nav-link" href="contact.html">ABOUT / CONTACTS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <!-- Topic of the page -->
-        <h2 align="center">Blog</h2>
+<div class="container blog-text">
+    <div class="row">
+        <div class="col-12">
+            <h1>Blog</h1>
+        </div>
+    </div>
+</div>
 
 <!-- Content on the page -->
-<table cellpadding="70px" cellspacing=""20px>
-    <tr>
-        <td></td>
-        <td>
-            <table>
-                <tr>
-                    <td>
-                        <h4>Make Your Body &amp; Mind Strong: </h4>
-                        <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
-                        <p>Last Upadated on Mar 12, 2020 : 19 min read</p> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Have a Slice:</h4>
-                        <p>Every one should have their meals three times a day, to maintain their health and to increase stamina.</p>
-                        <p>Jan 10, 2020  12:30</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Web Design and Development:</h4>
-                        <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
-                        <p>Feb 13, 2020  3:40 </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Be friends With Books:</h4>
-                        <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
-                        <p>Jan 29, 2020  5:20 </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h4>Food Is Necessary:</h4>
-                        <p>Try to enjoy as many meals as you can, by traveling all around the world. in addition learn more tradition by knowing the world.</p>
-                        <p>Feb 5, 2020 11:56 </p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-        <td>
-            <br><br><br><br>
-            <table>
-                <tr>
-                    <td>
-                        <img src="./assets/images/workout.jpg" alt="workout pics"><br><br><br><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./assets/images/slice (1).jpg" alt="food pics"><br><br><br><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./assets/images/web.jpg" alt="web design pic"><br><br><br><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./assets/images/books.jpg" alt="books pics"><br><br><br><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="./assets/images/slice (2).jpg" alt="food pics"><br><br><br><br>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
-
-
-
-<!-- The icon to Next page -->
-        <p align="center"><a href="blog2.html"><img src="./assets/images/Double Right_30px_1.png" alt="next page icon"></a></p>
-<br>
-<!-- footer links -->
-        <p align="center">
-            <a href="https://uk.practicallaw.thomsonreuters.com/4-503-9222?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1">LICENSE:CC-BY-SA <br><br>
-                <img src="./assets/images/Creative Commons_21px.png" alt="creative commons icon"><img src="./assets/images/User Engagement Male_21px.png" alt="user engagment icon"><img src="./assets/images/Copyleft_21px.png" alt="copyright icon">
+<div class="container">
+    <div class="row mx-auto justify-content-center">
+        <div class=" blog col-8 mb-5">
+            <h4><a href="blog.html"> Make Your Body &amp; Mind Strong:</a> </h4>
+            <p>Working out is essential in order to relax your muscles and fibers, which increases your reflexses.</p>
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="time">Last Upadated on Mar 12, 2020 : 19 min read .    
+                <span class="link-categories ml-3">
+                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>, <a href="#" target="_blank">netlify</a>
+                </span>
+            </div> 
+        </div>
+        <div class="col-2" id="blog-img-space">
+            <a href="blog.html" >
+                <img id="logo" src="./assets/images/workout.jpg" alt="">
             </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center">
+        <div class=" blog col-8 mb-5">
+            <h4><a href="blog.html"> Have a Slice:</a> </h4>
+            <p>Every one should have their meals three times a day, to maintain their health and to increase stamina.</p>
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="time">Last Upadated on Jan 10, 2020  12:30 min read  
+            </div> 
+        </div>
+        <div class="col-2" id="blog-img-space">
+            <a href="blog.html" >
+                <img id="logo" src="./assets/images/slice (1).jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center">
+        <div class=" blog col-8 mb-5">
+            <h4><a href="blog.html">Web Design and Development:</h4>
+            <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="time">Last Upadated on Feb 13, 2020  3:40 : 45 min read 
+            </div> 
+        </div>
+        <div class="col-2" id="blog-img-space">
+            <a href="blog.html" >
+                <img id="logo" src="./assets/images/web.jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center">
+        <div class=" blog col-8 mb-5">
+            <h4><a href="blog.html"> Be friends With Books</a></h4>
+            <p>Reading is one of the best ways of entertainment and aquiring knowledge, so be open minded all the time.</p>
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="time">Last Upadated on Jan 29, 2020  5:20: 7 min read .    
+                <span class="link-categories ml-3">
+                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>
+                </span>
+            </div> 
+        </div>
+        <div class="col-2" id="blog-img-space">
+            <a href="blog.html" >
+                <img id="logo" src="./assets/images/books.jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center">
+        <div class=" blog col-8 mb-5">
+            <h4><a href="blog.html">Food Is Necessary:</a></h4>
+            <p>Try to enjoy as many meals as you can, by traveling all around the world. in addition learn more tradition by knowing the world.</p>
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="time">Last Upadated on Feb 5, 2020 11:56  25 min read .    
+                <span class="link-categories ml-3">
+                    <i class="fas fa-folder mr-1"></i><a href="#" target="_blank">hugo</a>, <a href="#" target="_blank">blogdown</a>
+                </span>
+            </div> 
+        </div>
+        <div class="col-2" id="blog-img-space">
+            <a href="blog.html" >
+                <img id="logo" src="./assets/images/slice (2).jpg" alt="">
+            </a>
+        </div>
+    </div>
+</div>
+<!-- next Page -->
+<div class="pagination justify-content-center" id="next-page">
+    <a class="page-link" href="blog2.html" >»</a>
+</div>
+<!-- 
+<!-- footer links -->
+<div class="container">
+    <footer class="website-footer">
+        <p class="licensed">
+            <a href="">LICENSE: CC-BY-SA <br> <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i> </a><br>  
         </p>
-<!-- Bottom links -->
-        <p align="center">&#169;Abenezer Fekadu, 2020 · Made with <a href="">&#9825;</a>, <a href=""><img src="./assets/images/Code Fork_30px.png" alt="code fork icon"></a>, the <a href="">blogdown</a> package, and the <a href="">Academic theme</a> for <a href="">Hugo</a>.</p>
-        <p align="right"><a href=""><img src="./assets/images/Chevron Up_30px.png" alt="upward arrow icon"></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-
+        <p class="footer-text">
+                © Abenezer Fekadu, 2020 · Made with <i class="far fa-heart" style="color: #06805E"></i>, <a href="#" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="#" target="_blank"><i class="fab fa-r-project"></i> </a><a href="" target="_blank" >blogdown</a> package, and the 
+                <a href="" target="_blank">Academic theme</a> for <a href="" target="_blank">Hugo</a>.
+        <span class="float-right" aria-hidden="true">
+            <a href="#" id="back_to_top">
+                <span class="up_icon">
+                    <i class="fas fa-chevron-up fa-2x"></i>
+                </span>
+            </a>
+        </span>
+        </p>
+    </footer>
+</div>
 </body>
 </html>
