The page layout for talks and workshop page are done.

--- a/talk2.html
+++ b/talk2.html
@@ -43,7 +43,7 @@
 <div class="container blog-text">
     <div class="row">
         <div class="col-12">
-            <h1>Talks & Workshops</h1>
+            <h1>Tasks & Workshops</h1>
         </div>
     </div>
 </div>
@@ -52,7 +52,7 @@
 <div class="container">
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3>Upcomming</h3>
+            <h3>2021</h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Introduction to Mobile Programing</a> </h4>
@@ -64,14 +64,14 @@
             </div> 
         </div>
         <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="blog.html" >
+            <a href="#" >
                 <img id="logo" src="./assets/images/android (1).jpg" alt="">
             </a>
         </div>
     </div>
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3>Recent</h3>
+            <h3>2020</h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="blog.html" >
+            <a href="#" >
                 <img id="logo" src="./assets/images/python.jpg" alt="">
             </a>
         </div>
@@ -116,18 +116,140 @@
                     <i class="fas fa-play-circle mr-1"></i> video
                 </a>
             </div>
-            <div class="see-all">
-                <a href="talk2.html">SEE ALL TALKS<i class="fas fa-angle-right"></i></a>
-            </div>
         </div>
         <div class="col-lg-2 col-4" id="blog-img-space">
-            <a href="blog.html" >
+            <a href="#" >
                 <img id="logo" src="./assets/images/photoshop.jpg" alt="">
             </a>
         </div>
     </div>
-</div>
+    <div class="row mx-auto justify-content-center mb-5">
+        <div class="col-lg-2 col-12">
+            <h3></h3>
+        </div>
+        <div class=" blog col-lg-6 col-8">
+            <h4><a href="blog.html"> Web Design and Development:</a> </h4>
+            <p>Make your webite beautifull and more attractive by including new additional features to your site.</p>
 
+            <div class="time">June 10, 2020  3 hours</div> 
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="btn-adds">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fas fa-door-open mr-1"></i> website
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fab fa-github mr-1"></i> materials
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-2 col-4" id="blog-img-space">
+            <a href="#" >
+                <img id="logo" src="./assets/images/web.jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center mb-5">
+        <div class="col-lg-2 col-12">
+            <h3></h3>
+        </div>
+        <div class=" blog col-lg-6 col-8">
+            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
+
+            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="btn-adds">
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fas fa-images mr-1"></i>slides
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fas fa-play-circle mr-1"></i> video
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fab fa-github mr-1"></i>materials
+                </a>
+
+            </div>
+        </div>
+        <div class="col-lg-2 col-4" id="blog-img-space">
+            <a href="#" >
+                <img id="logo" src="./assets/images/python.jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center mb-5">
+        <div class="col-lg-2 col-12">
+            <h3></h3>
+        </div>
+        <div class=" blog col-lg-6 col-8">
+            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
+
+            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="btn-adds">
+
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                        project
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fas fa-images mr-1"></i>slides
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fab fa-github mr-1"></i>materials
+                </a>
+
+            </div>
+        </div>
+        <div class="col-lg-2 col-4" id="blog-img-space">
+            <a href="#" >
+                <img id="logo" src="./assets/images/python.jpg" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row mx-auto justify-content-center mb-5">
+        <div class="col-lg-2 col-12">
+            <h3></h3>
+        </div>
+        <div class=" blog col-lg-6 col-8">
+            <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
+            <p> one-month workshop to introduce the basics of Python tkinter and other programing languages.</p>
+
+            <div class="time">Last Upadated on Feb 29, 2020 9:00 AM . Addis Ababa</div> 
+            <span>
+                <a href="index.html">Abenezer Fekadu</a>
+            </span>
+            <div class="btn-adds">
+
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                        project
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fas fa-door-open mr-1"></i></i>websites
+                </a>
+                <a class="btn btn-outline-secondary mr-1 btn-sm" href="#" target="_blank">
+                    <i class="fab fa-github mr-1"></i>materials
+                </a>
+
+            </div>
+        </div>
+        <div class="col-lg-2 col-4" id="blog-img-space">
+            <a href="#" >
+                <img id="logo" src="./assets/images/python.jpg" alt="">
+            </a>
+        </div>
+    </div>
+</div>
+<!-- next page -->
+<div class="pagination justify-content-center" id="next-page">
+    <a class="page-link" href="task.html" >«</a><a class="page-link" href="talk.html" >»</a>
+</div>
 <!-- Fotter Links -->
 <div class="container">
     <footer class="website-footer">
