--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/CSS/Style.css">
 
 </head>
-<body  bgcolor="FBF9F4" link="#ff0000" alink="#ff0000" vlink="#ff0000" align="justify">
+<body>
 <!-- The navigation bar -->
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
     <div class="container-fluid">
