--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Abenezer F. /Contact</title>
     <link rel="icon" href="./assets/images/Xbox A_50px.png" type="image/png">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/CSS/Style.css">
@@ -23,7 +23,7 @@
                     <a class="nav-link active" href="blog.html">BLOG</a>
                 </li>
                 <li class=" line nav-item">
-                    <a class="nav-link" href="task.html">TASKS</a>
+                    <a class="nav-link" href="talk.html">TALKS</a>
                 </li>
                 <li class=" line nav-item ">
                     <a class="nav-link" href="gallery.html">GALLERY</a>
