--- a/talk3.html
+++ b/talk3.html
@@ -52,7 +52,7 @@
 <div class="container">
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3>2021</h3>
+            <h3>2019</h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Introduction to Mobile Programing</a> </h4>
@@ -71,7 +71,7 @@
     </div>
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3>2020</h3>
+            <h3></h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
@@ -125,7 +125,7 @@
     </div>
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3></h3>
+            <h3>2018</h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Web Design and Development:</a> </h4>
@@ -215,7 +215,7 @@
     </div>
     <div class="row mx-auto justify-content-center mb-5">
         <div class="col-lg-2 col-12">
-            <h3></h3>
+            <h3>2017</h3>
         </div>
         <div class=" blog col-lg-6 col-8">
             <h4><a href="blog.html"> Introduction to Python UI with Abenezer</a> </h4>
@@ -248,7 +248,7 @@
 </div>
 <!-- next page -->
 <div class="pagination justify-content-center" id="next-page">
-    <a class="page-link" href="task.html" >«</a><a class="page-link" href="talk3.html" >»</a>
+    <a class="page-link" href="talk2.html" >«</a>
 </div>
 <!-- Fotter Links -->
 <div class="container">
