The layout for the gallery page is completed.

--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,7 @@
         <div class="container mx-auto justify-content-center">
             <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
         </div>
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="container mx-auto justify-content-center">
@@ -46,7 +45,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
 </nav>
 <!-- fixed photo -->
 <div class="parrallex2">
