--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg sticky-top" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Abenezer Fekadu</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -65,6 +65,96 @@
 </div>
 
 <!-- This is for the gallary layout -->
+<div class="container mt-5">
+    <div class="row mx-auto justify-content-center">
+        <div class="col-lg-3">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
+                <div class="card-body">
+                    <h5 class="card-title">Mothers Graduation Day</h5>
+                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
+                <div class="card-body">
+                    <h5 class="card-title">Mothers Graduation Day</h5>
+                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top img-fluid" src="./assets/images/little bro.jpg" alt="brother pics">
+                <div class="card-body">
+                    <h5 class="card-title">Mothers Graduation Day</h5>
+                    <p class="card-text">we were exited to congrat her, this was a pic on that day.</p>
+                </div>
+            </div>
+        </div>   
+        <div class="col-lg-3">
+            <div class="card">
+                <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
+                <div class="card-body">
+                    <h5 class="card-title">Family Gathering</h5>
+                    <p class="card-text">
+                        The whole family was there having a greate time together.
+                        </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
+                <div class="card-body">
+                    <h5 class="card-title">Family Gathering</h5>
+                    <p class="card-text">
+                        The whole family was there having a greate time together.
+                        </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-container">
+                    <img class="card-img-top img-fluid" src="./assets/images/family.jpg"alt="family photo" >
+                    <div class="hoverText">
+                        <div class="caption">
+                            <i style="font-size:50px; color:red" class="fa fa-paw" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Family Gathering</h5>
+                    <p class="card-text">
+                        The whole family was there having a greate time together.
+                        </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="card">
+                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <div class="card-body">
+                    <h5 class="card-title">Exploring Day</h5>
+                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <div class="card-body">
+                    <h5 class="card-title">Exploring Day</h5>
+                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/images/chill.jpg" class="card-img-top" alt="me and my brother">
+                <div class="card-body">
+                    <h5 class="card-title">Exploring Day</h5>
+                    <p class="card-text">On this day me and my brother going all around the city.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
         <table cellspacing="10px">
             <tr>
                 <td>
@@ -97,7 +187,7 @@
                     <table bgcolor="white">
                         <tr>
                             <td>
-                                <img src="./assets/images/chill.jpg" alt="me and my brother"><br>
+                                <img src="./assets/images/chill.jpg" ><br>
                                 <big>
                                     <label for="">Exploring Day</label>
                                 </big>
